src/snapshots/bl__tests__snapshots__cmd_find__alt.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Find element by alt attribute

Usage: bl find alt [OPTIONS] <alt>

Arguments:
  <alt>  Find element by alt attribute

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl find alt "Logo"
