src/snapshots/bl__tests__snapshots__cmd_find__placeholder.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Find element by placeholder attribute

Usage: bl find placeholder [OPTIONS] <placeholder>

Arguments:
  <placeholder>  Find element by placeholder attribute

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl find placeholder "Search..."
  # → @e1 [input] placeholder="Search..."
