src/snapshots/bl__tests__snapshots__cmd_find__role.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Find element by ARIA role

Usage: bl find role [OPTIONS] <role>

Arguments:
  <role>  ARIA role to match

Options:
      --name <name>  Accessible name filter [default: ""]
  -v, --verbose      Enable debug logging
      --headless     Hide browser window (visible by default)
      --json         Output as JSON
  -h, --help         Print help

Examples:
  bl find role button
  # → @e1 [button] "Submit" @ (312,428) 96x40

  bl find role heading --name "Example"
  # Find heading with accessible name "Example"
