src/snapshots/bl__tests__snapshots__cmd_find__title.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Find element by title attribute

Usage: bl find title [OPTIONS] <title>

Arguments:
  <title>  Find element by title attribute

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl find title "Close"
