src/snapshots/bl__tests__snapshots__cmd_find__xpath.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Find element by XPath expression

Usage: bl find xpath [OPTIONS] <expression>

Arguments:
  <expression>  Find element by XPath expression

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl find xpath "//div[@class='main']"
  # → @e1 [div.main] ...
